--- a/src/components/SocialLinks/SocialLinks.css
+++ b/src/components/SocialLinks/SocialLinks.css
@@ -1,6 +1,6 @@
 .socialLinks {
   position: fixed;
-  bottom: 32px;
+  bottom: 68px;
   right: 32px;
   z-index: 10;
   display: flex;
@@ -22,7 +22,7 @@
 
 @media (max-width: 768px) {
   .socialLinks {
-    bottom: 20px;
+    bottom: 56px;
     right: 20px;
   }
 }
