--- a/src/components/VideoBackground/VideoBackground.css
+++ b/src/components/VideoBackground/VideoBackground.css
@@ -1,7 +1,7 @@
 .videoBackground {
   position: fixed;
-  inset: 15%;
-  top: 25%;
+  inset: 5%;
+  top: 15%;
   z-index: 0;
   overflow: hidden;
   border-radius: 24px;
