--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -59,5 +59,5 @@ h6 {
 
 #root {
   isolation: isolate;
-  height: 100vh;
+  min-height: 100vh;
 }
